<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu_simple">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/tituloAplicacion"

            android:textSize="30sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion1"
            android:backgroundTint="#6751a5"
            android:textColor="@color/white"
            android:onClick="ejemplo0_activity"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion2"
            android:backgroundTint="#6751a5"
            android:textColor="@color/white"
            android:onClick="ejemplo1_layouts_activity"

            />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#6751a5"
            android:textColor="@color/white"
            android:text="@string/opcion3"
            android:onClick="ejemplo2_tables_activity"/>
        <!--<Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="dialogo"
            android:text="@string/opcion4"
            />-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:onClick="dialogo"
            >

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/boton_estilo_6"
                android:gravity="center"
               >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion4"
                    android:textColor="@color/white"

                     />

            </LinearLayout>

            <!--This is the view which we will be animating
                in order to show shine effect-->
            <View
                android:id="@+id/shine2"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:background="@drawable/boton_estilo_6_brillo"
                android:rotation="20" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="acercade"
            >

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/boton_estilo_6"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcionA"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <!--This is the view which we will be animating
                in order to show shine effect-->
            <View
                android:id="@+id/shine3"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:background="@drawable/boton_estilo_6_brillo"
                android:rotation="20" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="dialogo2"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/boton_estilo_6"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/opcionB"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <!--This is the view which we will be animating
                in order to show shine effect-->
            <View
                android:id="@+id/shine"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:background="@drawable/boton_estilo_6_brillo"
                android:rotation="20" />

        </RelativeLayout>



        <!--<Button
            android:id="@+id/buttonA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="acercade"
            android:text="@string/opcionA"
            android:paddingVertical="9dp"/>-->
        <!--<Button
           android:id="@+id/buttonB"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:onClick="dialogo2"
           android:text="@string/opcionB" />-->
        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion5"
            android:onClick="mitabhost"
            android:backgroundTint="#6751a5"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion6"
            android:onClick="encuesta_activity"
            android:backgroundTint="#6751a5"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion7"
            android:onClick="colores"
            android:backgroundTint="#6751a5"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion8"
            android:onClick="calculadora_tabla_activity"
            android:backgroundTint="#6751a5"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion9"
            android:onClick="checkbox"
            android:backgroundTint="#6751a5"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Salir"
            android:onClick="salir"
            android:backgroundTint="#6751a5"
            android:textColor="@color/white"/>

    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>